--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.9.2",
+    "@clerk/nextjs": "^6.12.5",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.3",
@@ -38,6 +38,7 @@
     "sanity": "^3.67.1",
     "stripe": "^17.5.0",
     "styled-components": "^6.1.13",
+    "swr": "^2.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.2"
